# rPickle

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  pyproject.toml  quickstart.html
.doctrees/: environment.pickle  quickstart.doctree
.doctrees/api/: core.doctree  dis.doctree  ext.doctree
.doctrees/whatsnew/: 0.1.doctree  0.10.doctree  0.12.doctree  0.13.doctree  0.17.doctree  0.19.doctree  0.2.doctree  0.3.doctree  0.4.doctree  0.5.doctree  0.8.doctree  index.doctree
_modules/: index.html
_modules/rPickle/: core.html  ext.html
_sources/: installation.rst.txt
_sources/api/: core.rst.txt
_sources/whatsnew/: 0.10.rst.txt  0.12.rst.txt  0.13.rst.txt  0.14.rst.txt  0.16.rst.txt  0.18.rst.txt  0.19.rst.txt  0.2.rst.txt  0.3.rst.txt
api/: core.html  dis.html  ext.html
bench/: test_benchmark.py
docs/source/: conf.py  quickstart.rst
docs/source/api/: dis.rst
docs/source/whatsnew/: 0.1.rst  0.17.rst  0.5.rst  0.8.rst  0.9.rst
src/rPickle/: __init__.py  core.py  dis.py  ext.py  py.typed
src/rPickle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rPickle/pcls/: core_p1.py  core_p2.py  core_p3.py  core_p4.py  core_p5.py
tests/: test_basic.py  test_concurrent.py  test_containers.py  test_enhancement.py  test_errors.py  test_extension.py  test_extensions.py  test_file.py  test_fuzzing.py  test_protocol.py  test_security.py  test_sentinel.py
whatsnew/: 0.11.html  0.12.html  0.14.html  0.16.html  0.17.html  0.19.html  0.5.html  0.8.html
